syntax = "proto3";

// The greeting service definition.
service GameServerService {

	rpc Ping (PingRequest) returns (PingReply) {}

	rpc Authentication (AuthRequest) returns (AuthReply) {}

	rpc GameServerChannel (stream GameServerStream) returns (stream GameServerStream) {}

	rpc GameQueue (QueueRequest) returns (QueueReply) {}

}

enum GameType
{
	Normal = 0;
	Ranked = 1;
}

enum DeckType
{
	None = 0;
	Random = 1;
	DeckString = 2;
	CardIds = 3;
}

message PingRequest {
	string message = 1;
}
message PingReply {
	bool requestState = 1;
	string requestMessage = 2;
}

message AuthRequest {
	string accountName = 1;
	string accountPsw = 2;
}
message AuthReply {
	bool requestState = 1;
	string requestMessage = 2;
	int32 sessionId = 3;
	string sessionToken = 4;
}

message QueueRequest {
	int32 sessionId = 1;
	string sessionToken = 2;
	GameType gameType = 3;
	DeckType deckType = 4;
	string deckData = 5;
}
message QueueReply {
	bool requestState = 1;
	string requestMessage = 2;
}

message GameServerStream {
	int32 sessionId = 1;
	string sessionToken = 2;
	string message = 3;
}

